# PurrPhysics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build.bat
AtomixPhysics/: CMakeLists.txt
PurrPhysics/: CMakeLists.txt
PurrPhysics/include/PurrPhysics/: Collision.hpp  Force.hpp  PurrPhysics.hpp  Rigidbody.hpp  TransformData.hpp
PurrPhysics/include/PurrPhysics/Forces/: GravityForce.hpp
PurrPhysics/src/: Collision.cpp  Force.cpp  PurrPhysics.cpp  Rigidbody.cpp
Test/: CMakeLists.txt  main.cpp
Test/src/: main.cpp
